--- a/PRUEBASB.Api/appsettings.json
+++ b/PRUEBASB.Api/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=PruebaSB;Integrated Security=True"
+    "DefaultConnection": ""
+  },
+  "GoogleKey": {
+    "SecretKey": ""
   },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
